Chapter12/route-httpd2.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: httpd2
  name: httpd2
spec:
  host: myhttpd.example.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
    weight: 100
